fixes bug on input clear button alignment

--- a/ui/field-text.reel/field-text.css
+++ b/ui/field-text.reel/field-text.css
@@ -1,1 +1,1 @@
-.FieldText .Field-error{border-bottom-left-radius:0;border-bottom-right-radius:0;border-color:#e0003a}.FieldText-text{margin-top:.2em;line-height:1.5}
+.FieldText .Field-error{margin-top:0;border-radius:0;border-bottom-left-radius:4px;border-bottom-right-radius:4px}.FieldText-text{margin-top:.2em;line-height:1.5}
