--- a/ui/multiple-select.reel/_multiple-select.css
+++ b/ui/multiple-select.reel/_multiple-select.css
@@ -42,11 +42,13 @@
 .MultipleSelect-input-clearButton {
     position: absolute;
     padding: .25em;
-    height: 1.2em;
-    width:  1.2em;
-    top: 1em;
-    right: .5em;
-    margin-top: -.6em;
+
+    height: 1.25em;
+    width:  1.25em;
+    /* magic number :( */
+    top: .4em;
+    /* magic number :( - base on button size */
+    right: .4em;
     border-radius: 1em;
     color: #fff;
     transform: rotate(45deg);
