--- a/ui/select.reel/_select.css
+++ b/ui/select.reel/_select.css
@@ -38,9 +38,7 @@
     background: none;
     border: none;
 
-    &:hover {
-        background: none;
-    }
+    &:hover { background: none; }
 
     & > button:not(.montage--disabled):hover {
         box-shadow:  0 0 0 1px #0095d5;
